# fis-crawler

./: .gitignore  Makefile  NAMING_CONVENTIONS.md  README.md  inspect_fairway_54726.py  inspect_lock_6951.py  pyproject.toml  scrapy.cfg
.agents/: AGENTS.md
config/: lock_bridge_mappings.toml  schema.toml
docs/: IVS_README.md  ZENODO_DESCRIPTION.md  current_workflow.d2  gold_standard_paths.md  manual_schematization_notes.md  pdf_header.tex  proposed_workflow.d2  updated-lock-schematization.md  werkwijze_sluiscontrole.md
fis/: __init__.py  _version.py  cli.py  core.py  fetch_fairways.py  graph.py  middlewares.py  pipelines.py  ris_index.py  schematize.py  settings.py  utils.py
notebooks/: ais_analysis.ipynb  euris.ipynb  group-fis.ipynb  ivs_analysis.ipynb  kooman-method.ipynb  lock-info.ipynb  network.ipynb  schematize-lock.ipynb  wfswms.ipynb
qgis/: diagnostics-style.qml  diagnostics.qgz  euris-graph.qgz  euris-style-lines.qml  euris-style-points.qml  euris.qgz  fis-update.qgz  lock-validation.qgz
reference/: bodemhoogte_urls.txt  measurements.gpkg
scripts/: export_qgis_atlas.py  extract_lock_fixtures.py  feasibility_study_disk.py  generate_lock_diagnostics.py  generate_qgis_layers.py  generate_strategy_visuals.py  inspect_disk.py  inspect_exceptional_structures.py  lock_chamber_consistency.py  plot_issue_143.py  plot_issue_143_v2.py  profile_splicing.py  subset_test_data.py  test_geoseries.py  test_lock_51064.py  test_validation.py  validate_routes.py
tests/: conftest.py  inspect_euris_lobith.py  inspect_fairway_54726.py  inspect_lobith.py  inspect_lock_6951.py  test_attribute_propagation.py  test_berths.py  test_bivas_case_6668.py  test_bivas_case_7901.py  test_bridge_graph.py  test_core.py  test_embedded_matching.py  test_enrich.py  test_euris_io.py  test_fairway_splicer.py  test_graph_chambers.py  test_graph_outputs.py  (+16 more)
(+231 files in other folders)
