[project]
name = "fis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dask>=2025.5.1",
    "geopandas>=1.1.0",
    "geoviews>=1.14.0",
    "holoviews>=1.20.2",
    "jupyterlab>=4.4.3",
    "networkx>=3.5",
    "openpyxl>=3.1.5",
    "pandas>=2.3.0",
    "pyarrow>=21.0.0",
    "scrapy>=2.13.2",
]
