[project]
name = "fis"
version = "0.2.5"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.3.0",
    "dask>=2025.5.1",
    "geopandas>=1.1.0",
    "geoviews>=1.14.0",
    "holoviews>=1.20.2",
    "jupyterlab>=4.4.3",
    "networkx>=3.5",
    "openpyxl>=3.1.5",
    "pandas>=2.3.0",
    "pyarrow>=21.0.0",
    "scrapy>=2.13.2",
    "tabulate>=0.9.0",
]

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
    "pytest>=9.0.2",
]
