[project]
name = "fis"
dynamic = ["version"]
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.3.0",
    "dask>=2025.5.1",
    "geopandas>=1.1.0",
    "geoviews>=1.14.0",
    "holoviews>=1.20.2",
    "jinja2>=3.1.6",
    "jupyterlab>=4.4.3",
    "networkx>=3.5",
    "openpyxl>=3.1.5",
    "pandas>=2.3.0",
    "pyarrow>=21.0.0",
    "scrapy>=2.13.2",
    "tabulate>=0.9.0",
]

[project.scripts]
fis = "fis.cli:cli"

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
    "pytest>=9.0.2",
]

[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "fis/_version.py"

[tool.setuptools]
packages = ["fis"]

[tool.ruff]
exclude = [
    "fis/_version.py",
    "fis/graph/euris.py",
]
